# gz-gui

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Changelog.md  Migration.md  README.md  api.md.in  bitbucket-pipelines.yml  configure.bat  gz_gui_plugin.bzl  ign_gui_plugin.bzl  package.xml  spinbox_test.qml  tutorials.md.in
conf/: CMakeLists.txt  gui.yaml.in
doc/: CMakeLists.txt  footer.html  header.html  ignition.in  tutorials-header.html  tutorials.in
examples/: BUILD.bazel  CMakeLists.txt  README.md
examples/config/: cards_demo.config  dialog_on_exit_shutdown.config  display_plugins.config  empty_side_drawer.config  grid_config.config  hello.config  hellodouble.config  image.config  keypublisher.config  layout.config  menus.config  no_layout.config  no_panel.config  no_plugins_menu.config  no_side_drawer.config  plot.config  plugin_params.config  plugins_menu.config  pubsub.config  reqres.config  scene3d.config  scroll.config  spy.config  style.config  style_toolbars.config  stylesheet.config  time.config  topicInterface.config  topicViewer.config  topicsStats.config
examples/migrations/: scene3d_deprecation.sdf
examples/plugin/animated_box/: AnimatedBoxPlugin.cc  AnimatedBoxPlugin.hh  CMakeLists.txt  README.md  camera_track_box.config
examples/plugin/custom_context_menu/: CMakeLists.txt  CustomContext.cc  CustomContext.hh  CustomContext.qml  CustomContext.qrc  README.md
examples/plugin/designer_ui_file/: CMakeLists.txt  DesignerPlugin.cc  DesignerPlugin.hh  DesignerPlugin.ui
examples/plugin/dialog_from_plugin/: CMakeLists.txt  DialogFromPlugin.cc  DialogFromPlugin.hh  DialogFromPlugin.qml  DialogFromPlugin.qmlc  DialogFromPlugin.qrc  README.md
examples/plugin/gz_components/: CMakeLists.txt  GzComponents.cc  GzComponents.config  GzComponents.hh  GzComponents.qml  GzComponents.qrc  README.md
examples/plugin/hello_plugin/: BUILD.bazel  CMakeLists.txt  HelloPlugin.cc  HelloPlugin.config  HelloPlugin.hh  HelloPlugin.qml  README.md  hello.qrc
examples/plugin/hello_qml/: CMakeLists.txt  HelloQml.cc  HelloQml.hh  HelloQml.qml  README.md  resources.qrc
examples/plugin/ign_components/: CMakeLists.txt  IgnComponents.cc  IgnComponents.config  IgnComponents.hh  IgnComponents.qml  IgnComponents.qrc  README.md
examples/plugin/moving_randomly/: CMakeLists.txt  MovingRandomlyPlugin.cc  MovingRandomlyPlugin.hh
examples/plugin/multiple_qml/: AnotherQml.qml  CMakeLists.txt  MultipleQml.cc  MultipleQml.hh  MultipleQml.qml  MultipleQml.qrc  README.md
examples/standalone/custom_drawer/: CMakeLists.txt  CustomDrawer.qml  custom_drawer.cc  custom_drawer.config  custom_drawer.hh  custom_drawer.qrc
examples/standalone/custom_style/: CMakeLists.txt  README.md  resources.qrc  style.qss
examples/standalone/dialogs/: CMakeLists.txt  dialogs.cc
examples/standalone/marker/: README.md  (+2 more)
proto/: CMakeLists.txt
src/: Application.cc  Application_TEST.cc  BackEnd.cc  BackEnd_TEST.cc  BoolWidget.cc  BoolWidget_TEST.cc  CMakeLists.txt  CollapsibleWidget.cc  CollapsibleWidget_TEST.cc  ColorDialog.cc  ColorWidget.cc  ColorWidget_TEST.cc  ConfigWidget.cc  Conversions.cc  Conversions_TEST.cc  DensityWidget.cc  Dialog.cc  Dialog_TEST.cc  DisplayPlugin.cc  DisplayPlugin_TEST.cc  Dock.cc  DoubleWidget.cc  DragDropModel.cc  DragDropModel_TEST.cc  EditableLabel_TEST.cc  EnumWidget.cc  EnumWidget_TEST.cc  Example_TEST.cc  GeometryWidget.cc  GeometryWidget_TEST.cc  GroupWidget.cc  GuiEvents.cc  GuiEvents_TEST.cc  Helpers.cc  Helpers_TEST.cc  Iface.cc  Iface_TEST.cc  InstallationDirectories.cc  MainWindow.cc  MainWindow_TEST.cc  (+27 more)
src/Scene3D/: IgnRenderer.cc  IgnRenderer.hh  RenderWindow.cc  RenderWindow.hh  Scene3DInterface.cc  SceneManager.cc  SceneManager.hh  TextureNode.cc  TextureNode.hh
src/cmd/: CMakeLists.txt  cmdgui.rb.in  gui.bash_completion.sh  gui_main.cc  ign.cc  ign.hh  ign_TEST.cc
src/display_plugins/: CMakeLists.txt  GridDisplay.cc  GridDisplay_TEST.cc  RealtimeFactorDisplay.cc
src/interfaces/: Publisher.cc
src/plugins/: BUILD.bazel  CMakeLists.txt  CameraTrack3D.cc  CameraTrack3D_TEST.cc  Displays.cc  Displays_TEST.cc  EditableLabel.cc  ExportDialog.cc  Geometry3D.cc  Grid.cc  Grid3D.cc  Grid3D_TEST.cc  ImageDisplay.cc  ImageDisplay_TEST.cc  IncrementalPlot.cc  Light3D.cc  Palette.cc  PlayButtonPlugin.cc  PlotCanvas.cc  PlotCurve.cc  PlotManager.cc  PlotTracker.cc  PlotWindow.cc  PlotWindow_TEST.cc  Publisher.cc  Publisher_TEST.cc  Requester.cc  Requester_TEST.cc  Responder.cc  Responder_TEST.cc  Scene3D.cc  Scene3D_TEST.cc  TimePanel.cc  TimePanel_TEST.cc  TimePlugin.cc  TopicCurveHandler.cc  TopicEcho.cc  TopicEcho_TEST.cc  TopicInterface.cc  TopicInterface_TEST.cc  (+13 more)
src/widgets/: PlayButton.cc  Time.cc
test/: BUILD.bazel  CMakeLists.txt  test_config.h.in
test/config/: close_dialog_auto_gui_only.config  close_dialog_auto_shutdown.config  close_dialog_buttons.config  close_dialog_buttons_text.config  close_dialog_custom_shutdown_service.config  close_dialog_default_buttons.config  empty_stylesheet.config  huge_window.config  ignore.config  no_menus.config  plugins_menu.config  state.config  stylesheet.config  test.config
test/display_plugins/: CMakeLists.txt  TestDisplayPlugin.cc  TestDisplayPlugin.hh
test/gtest/: gtest-1.8.1.diff
test/helpers/: CMakeLists.txt  RenderEngineHelper.hh  TestHelper.cc  TestHelper.hh
test/integration/: CMakeLists.txt  ExamplesBuild_TEST.cc  Examples_TEST.cc  camera_tracking.cc  deprecated_TEST.cc  follow_config.cc  marker_manager.cc  minimal_scene.cc  point_cloud.cc  scene3d.cc  scene3d_config.cc  scene3d_events.cc  scene3d_load.cc  transport_scene_manager.cc
test/media/: fakemesh.dae
test/performance/: CMakeLists.txt
test/plugins/: CMakeLists.txt  TestBadInheritancePlugin.cc  TestBadInheritancePlugin.hh  TestInvalidQmlPlugin.cc  TestInvalidQmlPlugin.hh  TestInvalidQmlPlugin.qml  TestInvalidQmlPlugin.qrc  TestNotRegisteredPlugin.cc  TestNotRegisteredPlugin.hh  TestPlugin.cc  TestPlugin.hh  TestPlugin.qml  TestPlugin.qrc
test/regression/: CMakeLists.txt
test/styles/: red_bg.qss
(+631 files in other folders)
